--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-host: 0.0.0.0
-baseurl: "/tealeaf-http/"
+host: "0.0.0.0"
+#baseurl: "/tealeaf-http/"
 
 # Build settings
 markdown: kramdown
