--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 host: "0.0.0.0"
 # comment the line on local development env
-#baseurl: "/tealeaf-http/"
+baseurl: "/tealeaf-http/"
 
 # Build settings
 markdown: kramdown
