--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 # Site settings
-host: "0.0.0.0"
+host: 0.0.0.0
 # comment the line on local development env
 baseurl: "/tealeaf-http/"
 
-# Build settings
-markdown: kramdown
+# for support GFM, fenced_code_blocks
+markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
